# greyhillman.github.io

./: .editorconfig  .gitignore  .hlint.yaml  .travis.yml  Gemfile  Program.cs  README.md  _config.yml  about.html  build.csproj  hie.yaml  index.html  package-lock.json  package.json  posts.html  resume.html  site.cabal
.github/workflows/: static.yml
_includes/: footer.html  head.html  header.html
_layouts/: default.html
_posts/: 2017-07-03-hello-world.md
_sass/: syntax-highlighting.scss
css/: default.css  main.scss  syntax_highlighting.css
posts/: hello.html  index.html
posts/hello/: style.css
script/: cibuild  test.sh
site/: About.hs  Home.hs  Main.hs  Page.hs  Resume.hs  _layout.html  about.md  index.md  resume.md
site/Posts/: Index.hs  Post.hs
site/Posts/Hello/: Index.hs  style.less
site/css/: default.less  default.scss  figure.less  header.less  header.scss  icons.less  icons.scss
site/posts/: index.md
site/posts/inline-graphs/: index.md
site/simulators/: index.md
site/simulators/ecs-ec2/: README.md  package-lock.json  package.json  vue.config.js
site/simulators/ecs-ec2/public/: index.html
site/simulators/ecs-ec2/src/: App.vue
site/simulators/ecs-ec2/src/assets/: index.scss
site/simulators/ecs-ec2/src/components/: Alarm.vue  AutoScalingGroup.vue  Capacity.vue  Controls.vue  ECSService.vue  Instance.vue  Simulation.vue  (+3 more)
src/: CopyRule.cs  CssRule.cs  HtmlRule.cs  MarkdownHtmlRule.cs  MarkdownPandocRule.cs  NPMHtmlRule.cs  SassRule.cs  TopPageRule.cs
src/Development/: Site.hs
src/Markdown/: GraphExtension.cs  GraphRenderer.cs
(+10 files in other folders)
